# django-quick-jobs

./: Readme.md  pyproject.toml  pytest.ini  test_run_forever_exit.sh
.github/workflows/: analysis.yml  release.yml  tests.yml
example/: settings.py
example_app/: jobs.py  models.py  run_forever_job.py
example_app/migrations/: 0001_initial.py
job_runner/: __init__.py  apps.py  coordinator.py  environment.py  exceptions.py  registration.py  runner.py  sample_jobs.py  singlton.py  test_management_command.py  test_time.py  test_timeout.py  test_tracker.py  tests.py  time.py  timeouts.py  tracker.py
job_runner/management/commands/: run_jobs.py
test_app/: jobs.py  test_global_registration.py  test_management_command.py
test_project/: settings.py  wsgi.py
