[tool.poetry]
name = "django-quick-jobs"
version = "0.1.0"
description = "A method of quickly and simply running background jobs in a Django project"
authors = ["Adam Peacock <adam@thepeacock.net>"]
license = "MIT"
packages = [
    { include = "job_runner" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
include = [
    "LICENSE"
]
readme = "Readme.md"
homepage = "https://github.com/Hovercross/django-quick-jobs"
repository = "https://github.com/Hovercross/django-quick-jobs"
keywords = ["django", "tasks", "background"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
Django = ">=2.2"
structlog = "*"
pytest-timeout = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pylint = "^2.12.1"
rope = "^0.22.0"
pytest = "^6.2.5"
pytest-django = "^4.5.1"
pytest-cov = "^3.0.0"
mypy = "^0.942"
django-stubs = "^1.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "example.settings"